<resources>
    <string name="app_name">慧运维</string>
    <string name="please_net_work">哎呦断网了,请重新连接!!!</string>
    <string name="title_about">关于我们</string>
    <string name="developing">开发中,敬请期待。。。</string>
    <string name="title_system">系统</string>
    <string name="title_save">保存</string>
    <string name="title_sure">确定</string>
    <string name="title_duty_detail">值班详情</string>
    <string name="title_dinfo">设备信息</string>
    <string name="title_weibo">维保记录</string>
    <string name="title_modify_company">修改单位名称</string>
    <string name="title_modify_school">修改毕业院校</string>
    <string name="title_modify_name">修改昵称</string>
    <string name="title_param_enter">参数录入</string>
    <string name="title_device_list">设备信息列表</string>
    <string name="title_my_show">我的展会</string>
    <string name="title_energy_show">节能展会</string>
    <string name="title_my_publish">我的发布</string>
    <string name="title_my_train">我的培训</string>
    <string name="title_feedback">意见反馈</string>
    <string name="title_commit">提交</string>
    <string name="title_forgetpwd">忘记密码</string>
    <string name="title_finish">完成</string>
    <string name="title_friendmsg">好友消息</string>
    <string name="title_project_detail">暖通详情</string>
    <string name="title_bpd">变配电</string>
    <string name="title_environment">环控监测</string>
    <string name="title_project_introduce">集团项目概况</string>
    <string name="title_history_record">历史记录</string>
    <string name="title_hotmen">热门</string>
    <string name="title_invite">邀请码</string>
    <string name="title_modifypwd">修改密码</string>
    <string name="title_detail">详情</string>
    <string name="title_message_detail">留言详情</string>
    <string name="title_friend_detail">好友详情</string>
    <string name="title_my_friend">我的好友</string>
    <string name="title_my_favorite">我的收藏</string>
    <string name="title_design_diag">设计诊断</string>
    <string name="title_person_info">个人资料</string>
    <string name="title_project_info">项目信息</string>
    <string name="title_send">发送</string>
    <string name="title_send_state">发布动态</string>
    <string name="title_send_card">发帖</string>
    <string name="title_record">记录</string>
    <string name="title_device_lista">设备列表</string>
    <string name="title_running_evaluate">运行评价</string>
    <string name="title_running_record">运行记录</string>
    <string name="title_record_info">记录信息</string>
    <string name="title_setting">设置</string>
    <string name="title_appdown">二维码扫描</string>
    <string name="title_choose">选择</string>
    <string name="title_choose_user_list">选择用户列表</string>
    <string name="title_weibao_record">维保记录</string>
    <string name="app_introduct">app说明</string>
    <string name="overallEvaluate">运行评价</string>
    <string name="register">注册</string>
    <string name="company_instruction">*每个企业只需注册一次,注册人即是管理员</string>
    <string name="group_instruction">*每个集团只需注册一次,注册人即是管理员</string>
    <string name="personal_instruction">*员工可凭公司的邀请码注册，邀请码默认是管理员手机号</string>
    <string name="company_number">企业账户</string>
    <string name="personal_number">个人账户</string>
    <string name="group_name">集团名称</string>
    <string name="company_name">企业名称</string>
    <string name="invate_number">邀请码</string>
    <string name="user_name">用户名</string>
    <string name="pass_word">密码</string>
    <string name="sure_password">确认密码</string>
    <string name="identifying_code">验证码</string>
    <string name="get_identifying_code">获取验证码</string>
    <string name="phone">手机号</string>
    <string name="phone_error">手机格式不正确</string>
    <string name="pl_phone">请输入手机号</string>
    <string name="pl_group_number">请输入集团名称</string>
    <string name="pl_company_number">请输入企业名称</string>
    <string name="pl_real_name">请输入真实姓名</string>
    <string name="pl_password">请输入密码</string>
    <string name="pl_invate_code">请输入邀请码</string>
    <string name="pl_invate_code_group">请输入集团邀请码(选填)</string>
    <string name="pl_sure_password">请输入确认密码</string>
    <string name="pl_identifying_code">请输入验证码</string>
    <string name="found_group_number">创建集团账户</string>
    <string name="found_company_number">创建企业账户</string>
    <string name="found_pesonal_number">创建个人账户</string>
    <string name="read_agree">我已阅读并同意</string>
    <string name="register_protocol">注册协议</string>
    <string name="register_start_english">第一位必须是英文字母</string>
    <string name="modify_pwd_success">密码修改成功</string>
    <string name="pwd_atlast_six">密码长度至少6位</string>
    <string name="register_succeed">注册成功</string>
    <string name="register_identify_succeed">验证码已发送</string>
    <string name="login">登录</string>
    <string name="login_again">登录失效,请重新登录</string>
    <string name="param_fail">参数错误</string>
    <string name="centeridentify_error">证书错误</string>
    <string name="execute_error">执行失败</string>
    <string name="getToken_error">获取token失败</string>
    <string name="user_noExist">用户不存在</string>
    <string name="user_exist">已经存在</string>
    <string name="param_null">参数为空</string>
    <string name="invite_password">请输入密码</string>
    <string name="no_net">无可用网络</string>
    <string name="json_exception">解析数据异常</string>
    <string name="error_net">网络异常加载失败</string>
    <string name="server_throw">服务器异常</string>
    <string name="no_data">暂无数据</string>
    <string name="pie_no_data">饼图暂无数据</string>
    <string name="paint_error">表格异常，请稍后尝试！</string>
    <string name="all_load">已加载全部数据</string>
    <string name="action_settings">Settings</string>
    <string name="all_images">全部图片</string>
    <string name="folder_image_count">共%1$d张</string>
    <string name="preview_image_count">%1$s/%2$s</string>
    <string name="select_limit">最多选择%1$s张图片</string>
    <string name="complete">完成</string>
    <string name="select_complete">完成(%1$s/%2$s)</string>
    <string name="preview_count">预览(%1$s)</string>
    <string name="photo_crop">图片裁剪</string>
    <string name="origin">原图</string>
    <string name="origin_size">原图(%1$s)</string>
    <string name="sure">确定</string>
    <string name="canel">取消</string>
    <string name="net_wifi">请在wifi下获取最新版本</string>
    <string name="save_success">保存成功</string>
    <string name="save_error">保存失败，请重试</string>
    <string name="no_empty">不能为空</string>
    <string name="delete_succeed">删除成功</string>
    <string name="loading_fail">加载失败</string>
    <string name="quit_again">再按一次退出程序</string>
    <string name="download_failure">下载新版本失败</string>
    <string name="no_sdcard">sd卡不可用,无法自动更新</string>
    <string name="newest_version">newest</string>
    <string name="network_anomaly">网络异常</string>
    <string name="network_timeout">网络超时</string>
    <string name="json_anomaly">JSON解析异常</string>
    <string name="please_checkout_network">请检查网络设置</string>
    <string name="summer"> 夏季</string>
    <string name="winter"> 冬季</string>
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_seconds">秒</string>
    <string name="isyear">月(m)</string>
    <string name="ismonth">日(d)</string>
    <string name="isday">小时(h)</string>
    <string name="loading_running_lengji"> 冷机运行负载率%</string>
    <string name="loading_design_lengji"> 冷机设计负载率%</string>
    <string name="rela_danwei_fuhe"> 实际单位负荷(w/㎡)</string>
    <string name="loading_power">功率负荷率</string>
    <string name="loading_rate">频率</string>
    <string name="loading_factor">负载率</string>
    <string name="wet_bulb_temp">湿球温度</string>
    <string name="alert_dialog_ok">确定</string>
    <string name="alert_dialog_cancel">取消</string>
    <string name="hint_description_title">允许读取相关权限?</string>
    <string name="hint_description_why_we_need_the_permission">为了更好的运行程序请您允许同意相关权限?</string>
    <string name="enegry_coolsite_total">冷站总能耗</string>
    <string name="enegry_optimization">优化后能耗</string>
    <string name="enegry_cooltower_total">冷却塔能耗</string>
    <string name="enegry_coolpump_total">冷却泵能耗</string>
    <string name="enegry_refrigerator_total">冷机总能耗</string>
    <string name="enegry_freezing_total">冷冻泵能耗</string>
    <string-array name="tab_energy">
        <item>动态</item>
        <item>社区</item>
    </string-array>
    <string name="enegry_comment_no_null">评论内容不能为空</string>
    <string name="enegry_cancel_favorite">取消收藏</string>
    <string name="enegry_favorite_succeed">收藏成功</string>
    <string name="enegry_favorite_fail">收藏失败</string>
    <string name="enegry_data_succeed">数据获取正常</string>
    <string name="enegry_no_comment">暂无评论</string>
    <string name="enegry_get_comments_error">获取评论列表失败</string>
    <string name="enegry_comments_succeed">评论成功</string>
    <string name="enegry_comments_error">评论失败</string>
    <string name="enegry_delete_succeed">删除成功</string>
    <string name="enegry_delete_fail">删除失败</string>
    <string name="enegry_publish_succeesd">发布成功</string>
    <string name="enegry_publish_fail">发布失败</string>
    <string-array name="tab_energy8">
        <item>精选</item>
        <item>专栏</item>
        <item>讨论</item>
    </string-array>
    <string-array name="tab_my_favorite">
        <item>动态</item>
        <item>资讯</item>
    </string-array>
    <string-array name="tab_my_publish">
        <item>动态</item>
        <item>帖子</item>
    </string-array>
    <string name="report_enviroment">环境参数</string>
    <string name="report_winter">冬季</string>
    <string name="report_summer">夏季</string>
    <string name="report_enegry">能耗</string>
    <string name="runnig_rate">运行效率</string>
    <string name="oppo_yesterday">对比昨日</string>
    <string name="enegry_ranking">能耗排名</string>
    <string name="enegry_function_unopen">该功能暂未开放</string>
    <string name="running_recorder">记录人</string>
    <string name="running_recorder_null">您还没有给表格录入数据哟!</string>
    <string name="running_please">- -请选择- -</string>
    <string name="running_time">开始时间</string>
    <string name="running_endtime">结束时间</string>
    <string name="running_two">至</string>
    <string name="project_name">项目名称:</string>
    <string name="project_module">导出模板:</string>
    <string name="project_select">- -请选择时间- -</string>
    <string name="project_select_project">- -请选择项目- -</string>
    <string name="project_no_project">- -暂无项目名称- -</string>
    <string name="project_no_module">- -暂无项目模板- -</string>
    <string name="project_select_project_module">- -请选择项目模板- -</string>
    <string name="project_moduleName">暂无列表模板</string>
    <string name="report_original_data">导出数据</string>
    <string name="find_document">查看文件</string>
    <string name="download_notige">使用须知</string>
    <string name="download_notige_1">1.下载表格过程中请勿退出当前界面</string>
    <string name="download_notige_2">2.当选择开始时间、结束时间、项目名称时,才可点导出历史输出数据</string>
    <string name="download_notige_3">3.当历史输出数据提示下载成功后,进入文件管理,找到"00a_XiaoXiDownloads"文件夹即可</string>
    <string name="no_prejext">当前无选中项目</string>
    <string name="running_suggestion">运行建议</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="insert_card">插入卡</string>
    <string name="down_fail">下载失败</string>
    <string name="is_downing">正在下载</string>
    <string name="down_sucess">下载成功</string>
    <string name="original_pwd">当前密码</string>
    <string name="new_pwd">新密码</string>
    <string name="txt_setting_font_normal">小</string>
    <string name="txt_setting_font_mod">中</string>
    <string name="txt_setting_font_big">大</string>
    <string name="txt_setting_draw">修改排序</string>
    <string name="work_name_content">名称</string>
    <string name="guige_content">规格</string>
    <string name="work_count_content">数量</string>
    <string name="workorder_unit_price_content">单价</string>
    <string name="please_name"></string>
    <string name="guige"></string>
    <string name="work_count"></string>
    <string name="workorder_unit_price"></string>
</resources>