<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/line_add_device_information"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    android:gravity="center"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        style="@style/title_style">
        <include layout="@layout/include_back"></include>
        <TextView
            android:id="@+id/tv_title"
            android:text="@string/title_system"
            style="@style/title_center" />
        <TextView
            android:id="@+id/addDeviceInfo_tv_save"
            android:text="@string/title_save"
            style="@style/title_right"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/txt_setting_draw"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginRight="15dp"
        android:gravity="center_vertical|right"
        android:text="@string/txt_setting_draw"
        android:textColor="@color/black"
        android:textSize="@dimen/txt_draw_title"
        android:visibility="visible" />

    <com.kongtiaoapp.xxhj.ui.view.draglistview.DragListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@color/transparent" />
</LinearLayout>
