<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:progress="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/include_project_dtbackground"></include>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginRight="@dimen/line_mp_lr"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/txt_start"
            android:layout_width="@dimen/down_first_d"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:gravity="center_vertical|right"
            android:text="@string/running_time"
            android:textSize="@dimen/project_runningsize"/>

        <TextView
            android:id="@+id/txt_starttime"
            android:layout_width="0dp"
            android:layout_height="@dimen/running_select"
            android:layout_marginLeft="5dp"
            android:layout_weight="4"
            android:background="@drawable/text_frame"
            android:gravity="center"
            android:text="@string/project_select"
            android:textSize="@dimen/project_runningsize" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/running_two"
            android:textSize="@dimen/project_runningsize" />

        <TextView
            android:id="@+id/txt_endtime"
            android:layout_width="0dp"
            android:layout_height="@dimen/running_select"
            android:layout_marginLeft="5dp"
            android:layout_weight="4"
            android:background="@drawable/text_frame"
            android:gravity="center"
            android:text="@string/project_select"
            android:textSize="@dimen/project_runningsize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginRight="@dimen/line_mp_lr"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_projectName"
            android:layout_width="@dimen/down_first_d"
            android:layout_height="match_parent"
            android:gravity="center_vertical|right"
            android:text="@string/project_name"
            android:textSize="@dimen/project_runningsize" />

        <TextView
            android:id="@+id/txt_project_select"
            android:layout_width="match_parent"
            android:layout_height="@dimen/running_select"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:background="@drawable/text_frame"
            android:gravity="center"
            android:text="@string/project_select_project"
            android:textSize="@dimen/project_runningsize"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginRight="@dimen/line_mp_lr"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_projectmodule"
            android:layout_width="@dimen/down_first_d"
            android:layout_height="match_parent"
            android:gravity="center_vertical|right"
            android:text="@string/project_module"
            android:textSize="@dimen/project_runningsize" />

        <TextView
            android:id="@+id/txt_project_module"
            android:layout_width="match_parent"
            android:layout_height="@dimen/running_select"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:background="@drawable/text_frame"
            android:gravity="center"
            android:text="@string/project_select_project_module"
            android:textSize="@dimen/project_runningsize"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_report"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginLeft="@dimen/down_first_d"
        android:layout_marginRight="@dimen/line_mp_lr"
        android:layout_marginTop="16dp"
        android:background="@drawable/selector_report_original_data"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:text="@string/report_original_data"
        android:textColor="@color/white"
        android:textSize="@dimen/project_runningsize" />

    <RelativeLayout
        android:id="@+id/rela_loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/txt_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="正在下载:"
            android:textSize="15sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/txt_loading_shu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/txt_loading"
            android:text="0"
            android:textSize="18sp"
            android:visibility="invisible" />
    </RelativeLayout>

    <com.kongtiaoapp.xxhj.ui.view.ProgressBar_Report_Data
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleHorizontal"
        progress:textColor="@color/theme_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="5dp"
        android:background="@color/back_color">

        <TextView
            android:id="@+id/txt_notice"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/download_notige"
            android:textColor="@color/down_content"
            android:textSize="@dimen/download_notige_size" />

        <TextView
            android:layout_width="@dimen/down_view_bg"
            android:layout_height="1dp"
            android:layout_marginTop="30dp"
            android:layout_toLeftOf="@+id/txt_notice"
            android:background="@color/down_content" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="@dimen/down_view_bg"
            android:layout_height="1dp"
            android:layout_marginTop="30dp"
            android:layout_toRightOf="@id/txt_notice"
            android:background="@color/down_content" />

        <TextView
            android:id="@+id/txt_down_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_notice"
            android:layout_marginLeft="@dimen/download_notice_lf"
            android:layout_marginRight="@dimen/download_notice_lf"
            android:layout_marginTop="15dp"
            android:text="@string/download_notige_1"
            android:textColor="@color/down_content"
            android:textSize="@dimen/project_runningsize" />

        <TextView
            android:id="@+id/txt_down_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_down_1"
            android:layout_marginLeft="@dimen/download_notice_lf"
            android:layout_marginRight="@dimen/download_notice_lf"
            android:layout_marginTop="@dimen/download_notice_tp"
            android:text="@string/download_notige_2"
            android:textColor="@color/down_content"
            android:textSize="@dimen/project_runningsize"/>

        <TextView
            android:id="@+id/txt_down_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_down_2"
            android:layout_marginLeft="@dimen/download_notice_lf"
            android:layout_marginRight="@dimen/download_notice_lf"
            android:layout_marginTop="@dimen/download_notice_tp"
            android:text="@string/download_notige_3"
            android:textColor="@color/down_content"
            android:textSize="@dimen/project_runningsize"/>
    </RelativeLayout>
</LinearLayout>