<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_view_line"></include>

    <LinearLayout
        style="@style/line_line"
        android:visibility="visible">

        <TextView
            android:id="@+id/txt_name"
            style="@style/word_order_kancha"
            android:text="@string/work_name_content" />


        <TextView
            android:id="@+id/txt_spec"
            style="@style/word_order_kancha"
            android:hint="@string/guige_content" />

        <TextView
            android:id="@+id/txt_count"
            style="@style/word_order_kancha"
            android:hint="@string/work_count_content" />


        <TextView
            android:id="@+id/txt_unit"
            style="@style/word_order_kancha"
            android:hint="@string/workorder_unit_price_content" />

    </LinearLayout>

    <include
        android:id="@+id/txts"
        layout="@layout/include_view_line"></include>

    <LinearLayout
        android:id="@+id/line_line"
        style="@style/line_line"
        android:visibility="visible">

        <EditText
            android:id="@+id/edt_name_count"
            style="@style/word_order_kancha"
            android:hint="@string/please_name" />


        <EditText
            android:id="@+id/edt_spec_count"
            style="@style/word_order_kancha"
            android:hint="@string/guige" />

        <EditText
            android:id="@+id/edt_count_count"
            style="@style/word_order_kancha"
            android:hint="@string/work_count" />


        <EditText
            android:id="@+id/edt_unit_count"
            style="@style/word_order_kancha"
            android:hint="@string/workorder_unit_price" />

    </LinearLayout>

    <include layout="@layout/include_view_line"></include>


    <LinearLayout
        android:id="@+id/line_line1"
        android:visibility="gone"
        style="@style/line_line">

        <EditText
            android:id="@+id/edt_name_count1"
            style="@style/word_order_kancha"
            android:hint="@string/please_name" />


        <EditText
            android:id="@+id/edt_spec_count1"
            style="@style/word_order_kancha"
            android:hint="@string/guige" />

        <EditText
            android:id="@+id/edt_count_count1"
            style="@style/word_order_kancha"
            android:hint="@string/work_count" />


        <EditText
            android:id="@+id/edt_unit_count1"
            style="@style/word_order_kancha"
            android:hint="@string/workorder_unit_price" />

    </LinearLayout>

    <include
        android:id="@+id/txt1"
        layout="@layout/include_view_line"
        android:visibility="visible"></include>

    <LinearLayout
        android:id="@+id/line_line2"
        android:visibility="gone"
        style="@style/line_line">

        <EditText
            android:id="@+id/edt_name_count2"
            style="@style/word_order_kancha"
            android:hint="@string/please_name" />


        <EditText
            android:id="@+id/edt_spec_count2"
            style="@style/word_order_kancha"
            android:hint="@string/guige" />

        <EditText
            android:id="@+id/edt_count_count2"
            style="@style/word_order_kancha"
            android:hint="@string/work_count" />


        <EditText
            android:id="@+id/edt_unit_count2"
            style="@style/word_order_kancha"
            android:hint="@string/workorder_unit_price" />

    </LinearLayout>

    <include
        android:id="@+id/txt2"
        layout="@layout/include_view_line"
        android:visibility="visible"></include>

    <LinearLayout
        android:id="@+id/line_line3"
        style="@style/line_line"
        android:visibility="gone">

        <EditText
            android:id="@+id/edt_name_count3"
            style="@style/word_order_kancha"
            android:hint="@string/please_name" />


        <EditText
            android:id="@+id/edt_spec_count3"
            style="@style/word_order_kancha"
            android:hint="@string/guige" />

        <EditText
            android:id="@+id/edt_count_count3"
            style="@style/word_order_kancha"
            android:hint="@string/work_count" />


        <EditText
            android:id="@+id/edt_unit_count3"
            style="@style/word_order_kancha"
            android:hint="@string/workorder_unit_price" />

    </LinearLayout>

    <include
        android:id="@+id/txt3"
        layout="@layout/include_view_line"
        android:visibility="gone"></include>

    <LinearLayout
        android:id="@+id/line_line4"
        style="@style/line_line"
        android:visibility="gone">

        <EditText
            android:id="@+id/edt_name_count4"
            style="@style/word_order_kancha"
            android:hint="@string/please_name" />


        <EditText
            android:id="@+id/edt_spec_count4"
            style="@style/word_order_kancha"
            android:hint="@string/guige" />

        <EditText
            android:id="@+id/edt_count_count4"
            style="@style/word_order_kancha"
            android:hint="@string/work_count" />


        <EditText
            android:id="@+id/edt_unit_count4"
            style="@style/word_order_kancha"
            android:hint="@string/workorder_unit_price" />

    </LinearLayout>

    <include
        android:id="@+id/txt4"
        layout="@layout/include_view_line"
        android:visibility="gone"></include>

    <LinearLayout
        android:id="@+id/line_line5"
        style="@style/line_line"
        android:visibility="gone">

        <EditText
            android:id="@+id/edt_name_count5"
            style="@style/word_order_kancha"
            android:hint="@string/please_name" />


        <EditText
            android:id="@+id/edt_spec_count5"
            style="@style/word_order_kancha"
            android:hint="@string/guige" />

        <EditText
            android:id="@+id/edt_count_count5"
            style="@style/word_order_kancha"
            android:hint="@string/work_count" />


        <EditText
            android:id="@+id/edt_unit_count5"
            style="@style/word_order_kancha"
            android:hint="@string/workorder_unit_price" />
    </LinearLayout>

    <include
        android:id="@+id/txt5"
        layout="@layout/include_view_line"
        android:visibility="gone"></include>
</LinearLayout>