<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/line_add_device_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        style="@style/title_style"
        android:layout_width="match_parent">

        <include layout="@layout/include_back"></include>

        <TextView
            android:id="@+id/tv_title"
            style="@style/title_center"
            android:text="@string/title_dinfo" />

        <TextView
            android:id="@+id/addDeviceInfo_tv_save"
            style="@style/title_right"
            android:text="@string/title_save" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/txt_setting_font_small"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:gravity="center_vertical|left"
                android:paddingLeft="@dimen/device_space"
                android:paddingRight="@dimen/device_space"
                android:text="@string/txt_setting_font_normal"
                android:textColor="@color/devicedetail_selectcolor"
                android:textSize="@dimen/device_fontsize"
                android:visibility="visible" />

            <View
                android:layout_width="1dp"
                android:layout_height="18dp"
                android:layout_marginTop="16dp"
                android:layout_toRightOf="@+id/txt_setting_font_small"
                android:background="@color/main_color"></View>

            <TextView
                android:id="@+id/txt_setting_font_mid"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="1dp"
                android:layout_toRightOf="@+id/txt_setting_font_small"
                android:gravity="center_vertical|left"
                android:paddingLeft="@dimen/device_space"
                android:paddingRight="@dimen/device_space"
                android:text="@string/txt_setting_font_mod"
                android:textColor="@color/devicedetail_selectcolor"
                android:textSize="@dimen/device_fontsize"
                android:visibility="visible" />

            <View
                android:layout_width="1dp"
                android:layout_height="18dp"
                android:layout_marginTop="16dp"
                android:layout_toRightOf="@+id/txt_setting_font_mid"
                android:background="@color/main_color"></View>

            <TextView
                android:id="@+id/txt_setting_font_big"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_toRightOf="@+id/txt_setting_font_mid"
                android:gravity="center_vertical|left"
                android:paddingLeft="@dimen/device_space"
                android:paddingRight="@dimen/device_space"
                android:text="@string/txt_setting_font_big"
                android:textColor="@color/devicedetail_selectcolor"
                android:textSize="@dimen/device_fontsize"
                android:visibility="visible" />

            <TextView
                android:id="@+id/txt_setting_draw"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical|right"
                android:paddingRight="15dp"
                android:text="@string/txt_setting_draw"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_draw_title"
                android:visibility="gone" />
        </RelativeLayout>

        <com.kongtiaoapp.xxhj.ui.view.MyLinearlayout
            android:id="@+id/ml_add_device"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:orientation="vertical">
            <com.kongtiaoapp.xxhj.ui.view.draglistview.DragListView
                android:id="@+id/listview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@color/transparent" />
        </com.kongtiaoapp.xxhj.ui.view.MyLinearlayout>




    </FrameLayout>
</LinearLayout>
